[Fix] -> Spacing for group param fixed.

--- a/inc/assets/css/astra-admin-rtl.css
+++ b/inc/assets/css/astra-admin-rtl.css
@@ -69,6 +69,10 @@
 	margin-bottom: 12px;
 }
 
+.customize-control-ast-settings-group {
+	line-height: 26px;
+}
+
 .customize-control-ast-settings-group .customize-control-title {
 	margin-bottom: 0;
 }
