--- a/inc/customizer/custom-controls/settings-group/settings-group.css
+++ b/inc/customizer/custom-controls/settings-group/settings-group.css
@@ -1,6 +1,7 @@
 
 .ast-adv-toggle-icon{
     right: 2px;
+    top: 2px;
     position: absolute;
     width: 18px;
     height: 18px;
